# open_medicare_simulator

./: .cursorrules  .gitignore  APPS_README.md  PLAN.md  PLOTLY_FIX_README.md  README.md  STREAMLIT_README.md  app.py  app_comparison.py  app_comparison_fixed.py  app_fixed.py  app_updated.py  app_updated_fixed.py  demo_plans.py  gui.py  launch_app.py  launch_app_fixed.py  main.py  main_app.py  pyproject.toml
pages/: 1_Single_Plan_Simulator.py  2_Plan_Comparison.py
src/medigap/: __init__.py
src/medigap/models/: __init__.py  plan.py  plans.py  simulation_parameters.py
src/medigap/simulation/: __init__.py  cost_calculator.py  monte_carlo.py  plan_cost_calculator.py  plan_monte_carlo.py
src/medigap/visualization/: __init__.py  charts.py
tests/: __init__.py  test_cost_calculator.py  test_integration.py  test_monte_carlo.py  test_plan.py  test_plan_cost_calculator.py  test_plans.py  test_simulation_parameters.py  test_visualization.py
